Get All Users Create of path "/api"
